# scenariocompass

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yaml  pytest.yml
docs/: api.rst  conf.py  index.rst
docs/_static/: custom.css
docs/_templates/: layout.html  navigation.html
scenariocompass/: __init__.py  emissions_diagnostics.py  historical_vetting.py  logging.yaml
tests/: test_core.py  test_emission_diagnostics.py
tests/data/: emission_diagnostics.csv
