[project]
name = "scenariocompass"
version = "0.1.0"
description = "Utility functions for validation and analysis of Integrated-Assessement scenarios as used by the Scenario Compass Initiative"
authors = [
    {name = "Daniel Huppmann", email = "huppmann@iiasa.ac.at"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/IAMconsortium/scenariocompass"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
bump = true
enable = true
style = "pep440"
vcs = "git"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
