[project]
name = "scenariocompass"
description = "Validation and analysis of integrated-assessment scenarios"
authors = [
    {name = "Daniel Huppmann", email = "huppmann@iiasa.ac.at"}
]
license = "MIT"
readme = "README.md"
version = "0.0.0"
requires-python = ">=3.11, <3.14"
dependencies = [
    "nomenclature-iamc (==0.29.6)"
]
dynamic = ["version"]

[project.urls]
homepage = "https://scenariocompass.org"
repository = "https://github.com/IAMconsortium/scenariocompass"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
bump = true
enable = true
style = "pep440"
vcs = "git"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
